Implement ADR-025 agent coordination protocol and complete A2A/MCP-ZAI integration
- Implement agent coordination protocol with GenericPartyAgent
- Add handoff support for A2A transitions
- Complete MCP-ZAI integration capabilities
- Add partitioned agent discovery strategy
- Implement conflict resolution mechanisms
- Add comprehensive A2A handoff integration tests
- Remove deprecated selfplay and MCP capability tests
- Update scripts for protocol compliance and deployment
- Add final integration reports and documentation

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>